Avoid double scroll bar

--- a/frontend/styles/components/dashboard-element/dashboard-panel.scss
+++ b/frontend/styles/components/dashboard-element/dashboard-panel.scss
@@ -10,7 +10,7 @@
 
   .dashboard-panel-content {
     flex: 1;
-    overflow: auto;
+    overflow: hidden;
     padding: 20px 25px 0;
   }
 
